src/app/components/home/home.css
.card {
  --bg-color: #111;
  /* background-color: var(--bg-color); */
  padding: 1rem 2rem;
  border-radius: 1.25rem;
}
.loader {
  color: rgb(124, 124, 124);
  font-family: 'Poppins', sans-serif;
  font-weight: 500;
  font-size: 4vw;
  -webkit-box-sizing: content-box;
  box-sizing: content-box;
  height: calc(4vw + 20px);
  padding: 20px 20px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  border-radius: 8px;
}

.words {
  overflow: hidden;
  position: relative;
  font-weight: 800;
}
.words::after {
  content: '';
  position: absolute;
  inset: 0;
  background: linear-gradient(white 10%, transparent 30%, transparent 80%, white 90%);
  z-index: 20;
}

.word {
  display: block;
  height: 100%;
  padding-left: 20px;
  animation: spin_4991 8s infinite;
}

@keyframes spin_4991 {
  10% {
    -webkit-transform: translateY(-102%);
    transform: translateY(-102%);
  }

  25% {
    -webkit-transform: translateY(-100%);
    transform: translateY(-100%);
  }

  35% {
    -webkit-transform: translateY(-202%);
    transform: translateY(-202%);
  }

  50% {
    -webkit-transform: translateY(-200%);
    transform: translateY(-200%);
  }

  60% {
    -webkit-transform: translateY(-302%);
    transform: translateY(-302%);
  }

  75% {
    -webkit-transform: translateY(-300%);
    transform: translateY(-300%);
  }

  85% {
    -webkit-transform: translateY(-402%);
    transform: translateY(-402%);
  }

  100% {
    -webkit-transform: translateY(-400%);
    transform: translateY(-400%);
  }
}

.info-container p {
  width: 80%;
}

.info-container p:nth-child(odd) {
  align-items: flex-start;
}

.info-container p:nth-child(even) {
  align-items: flex-end;
  text-align: right;
  margin-left: auto;
}

@media (max-width: 680px) {
  .card {
    padding: 0;
  }
  .loader {
    font-size: 6vw;
    height: calc(14vw + 20px);
    padding: 0;
    flex-direction: column;
    align-items: start;
    padding-left: 0;
  }
  .word {
    padding-left: 0;
  }
}

